--- a/styles/index.css
+++ b/styles/index.css
@@ -23,7 +23,7 @@ body {
 
 .container {
     text-align: center;
-    max-width: 375px;
+    width: 100%;
     margin-top: 100px;
     color: var(--VeryDarkBlue);
 }
@@ -49,15 +49,19 @@ header > h1, .power {
 
 .card-supervisor {
     border-top: 5px solid var(--Cyan);
+    grid-area: card-s;
 }
 .card-team-builder {
     border-top: 5px solid var(--Red);
+    grid-area: card-t;
 }
 .card-karma {
     border-top: 5px solid var(--Orange);
+    grid-area: card-k;
 }
 .card-calc {
     border-top: 5px solid var(--Blue);
+    grid-area: card-c;
 }
 
 .card-supervisor, .card-team-builder, .card-karma, .card-calc {
@@ -89,18 +93,25 @@ header > h1, .power {
 
 @media screen and (min-width: 700px) {
     .container {
-        max-width: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .cards-container {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        /* column-gap: 20px; */
+        place-items: center;
+        justify-content: center;
+          gap: 15px;
+          grid-template-columns: repeat(3, minmax(450px, 450px));
+          grid-template-areas:
+            "card-s  card-t  card-c"
+            "card-s card-k card-c";
     }
 
-    .cards-container > div:nth-child(3) {
-        grid-row: 2;
-        /* grid-column: ; */
+    .ai {
+        width: 650px;
     }
+}
 
     .card-supervisor, .card-team-builder, .card-karma, .card-calc {
         width: 365px;
@@ -109,4 +120,3 @@ header > h1, .power {
     .card-supervisor {
         justify-self: center;
     }
-}
