--- a/styles/index.css
+++ b/styles/index.css
@@ -15,29 +15,25 @@
 }
 
 body {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     font-family: 'Poppins', sans-serif;
 }
 
 .container {
     text-align: center;
-    width: 100%;
-    margin-top: 100px;
+    margin: 1rem;
     color: var(--VeryDarkBlue);
 }
 
-header > h1, .power {
-    font-size: 1.92rem;
-    font-weight: 200;
-}
-
-.power {
+main > h1 {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    font-weight: 600;
+    font-size: 1.92rem;
+    font-weight: 200;
 }
 
 .ai {
@@ -75,7 +71,7 @@ header > h1, .power {
                 0px -8px 16px rgba(0, 0, 0, 0);
 }
 
-.card-supervisor > .details > span, .card-team-builder > .details > span, .card-karma > .details > span, .card-calc > .details > span {
+.card-supervisor > .details > h2, .card-team-builder > .details > h2, .card-karma > .details > h2, .card-calc > .details > h2 {
     font-size: 1.4rem;
     font-weight: 600;
 }
@@ -89,6 +85,7 @@ header > h1, .power {
 
 .card-para {
     color: var(--GrayishBlue);
+    font-weight: 400;
 }
 
 @media screen and (min-width: 700px) {
@@ -101,22 +98,15 @@ header > h1, .power {
         display: grid;
         place-items: center;
         justify-content: center;
-          gap: 15px;
-          grid-template-columns: repeat(3, minmax(450px, 450px));
-          grid-template-areas:
+        gap: 15px;
+        grid-template-columns: repeat(3, 1fr);
+        max-width: 80rem;
+        grid-template-areas:
             "card-s  card-t  card-c"
             "card-s card-k card-c";
     }
 
     .ai {
-        width: 650px;
+        max-width: 55ch;
     }
 }
-
-    .card-supervisor, .card-team-builder, .card-karma, .card-calc {
-        width: 365px;
-    }
-
-    .card-supervisor {
-        justify-self: center;
-    }
